Archive2/2e/e56ca2a11fed63/output
main.cpp: In function 'int main()':
main.cpp:9:10: warning: variable 'fn' set but not used [-Wunused-but-set-variable]
     auto fn = [&myName]{
          ^
main.cpp: In function 'int age(std::string)':
main.cpp:20:9: error: 'cout' was not declared in this scope
         cout << 19;
         ^
main.cpp:20:9: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:22:9: error: 'cout' was not declared in this scope
         cout << 18;
         ^
main.cpp:22:9: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:24:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
